@@ -1,3 +1,9 @@
+2009-06-26  Robert Jordan  <robertj@gmx.net>
+
+	* EventHandlerListTests.cs, LicenseManagerTests.cs:
+	Upgrade to new NUnit style. Standalone tests (#if !NUNIT)
+	removed.
+
 2009-06-22  Marek Habersack  <mhabersack@novell.com>
 
 	* TypeDescriptorTests.cs: added tests for 2.0+ APIs which deal
